<resources>
    <string name="app_name">AssistApp</string>
    <string name="AcompañaApp">AcompañaApp</string>
    <string name="AgendarCita">Agendar Cita</string>
    <string name="ConsultarCita">Consultar Cita</string>
    <string name="siguientes_text">Usted tiene los siguientes servicios asignados</string>
    <string name="aceptar_button">Aceptar</string>
    <string name="paciente_text">Paciente: Maria Edilma Calderón</string>


    <string name="tipoText">Tipo de acompañamiento:</string>
    <string name="enfermeroText">Enfermero:</string>
    <string name="fechaTexto">Fecha:</string>
    <string name="horaText">Hora:</string>
    <string name="regresar_button">Regresar</string>
    <string name="miss_information">¿Está seguro que quiere regresar?\n
    Perderá la información digitada</string>
    <string name="ingrese">Ingrese los datos de la cita</string>
</resources>
