<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="?attr/dialogPreferredPadding"
    tools:context=".AgendarCitaActivity">

    <include layout="@layout/logo" />

    <TextView
        android:id="@+id/tipoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipoText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/tipoSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tipos" />

    <TextView
        android:id="@+id/fechaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechaTexto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/fechaEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="aa-mm-dd"
        android:inputType="date" />

    <TextView
        android:id="@+id/enfermeroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enfermeroText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/enfermeroSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/stubEnfermero" />

    <TextView
        android:id="@+id/horaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horaText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/horaSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/stubHoras" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRegresar"
            android:text="@string/regresar_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/agendarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AgendarCita"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</LinearLayout>