<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="?attr/dialogPreferredPadding"
    tools:context=".ConsultarCitasActivity">

    <include layout="@layout/logo" />

    <TextView
        android:id="@+id/pacienteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_items"
        android:text="@string/paciente_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/siguientesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="?attr/dialogPreferredPadding"
        android:text="@string/siguientes_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/aceptarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAceptar"
        android:padding="?attr/dialogPreferredPadding"
        android:text="@string/aceptar_button"
        android:visibility="visible" />

</LinearLayout>